force-app/main/default/objects/Checklist_Section__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Checklist Sections</relationshipLabel>
    <relationshipName>Checklist_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>