force-app/main/default/objects/Checklist_Section__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <label>Checklist</label>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Checklist Sections</relationshipLabel>
    <relationshipName>Checklist_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>