force-app/main/default/objects/Checklist_Section__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Checklist Sections</relationshipLabel>
    <relationshipName>Checklist_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>