force-app/main/default/objects/Checklist_Section__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Checklist Sections</relationshipLabel>
    <relationshipName>Checklist_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>