force-app/main/default/objects/Checklist_Section__c/fields/Documents_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Documents_Reviewed__c</fullName>
    <label>Documents Reviewed</label>
    <summaryFilterItems>
        <field>Checklist_Item__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Document Upload</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Checklist_Item__c.Reviewed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Checklist_Item__c.Checklist_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>