force-app/main/default/objects/Checklist_Section__c/fields/PDF_Generation_Ids__c.field-meta.xml
<CustomField>
    <fullName>PDF_Generation_Ids__c</fullName>
    <label>PDF Generation Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>