force-app/main/default/objects/Checklist_Section__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Checklist Sections</relationshipLabel>
    <relationshipName>Checklist_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>