force-app/main/default/objects/Checklist_Section__c/fields/Total_Documents__c.field-meta.xml
<CustomField>
    <fullName>Total_Documents__c</fullName>
    <label>Total Documents</label>
    <summaryFilterItems>
        <field>Checklist_Item__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Document Upload</value>
    </summaryFilterItems>
    <summaryForeignKey>Checklist_Item__c.Checklist_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>