force-app/main/default/objects/Checklist_Section__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>