force-app/main/default/objects/Checklist_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Checklist__c</columns>
    <columns>Deal__c</columns>
    <columns>Property__c</columns>
    <columns>Type__c</columns>
    <columns>Documents_Uploaded__c</columns>
    <columns>Documents_Reviewed__c</columns>
    <columns>Total_Documents__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>